Bug 967614 - Comment out bogus assertion and re-enable test_closeOnGC.html on Android and B2G. r=khuey, a=test-only